[694713] fix alignment issue in cart

--- a/src/packages/blocks/shoppingcart/assets/css/index.css
+++ b/src/packages/blocks/shoppingcart/assets/css/index.css
@@ -590,7 +590,7 @@ form.yt-cart-disct-wrap .success.form-group {
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-start;
-}
+} 
 
 .cart-quantity-box {
   /* position: relative; */
@@ -1092,7 +1092,7 @@ form.yt-cart-disct-wrap .success.form-group {
     font-size: 16px;
   }
   .cart-produt-list-wrap {
-    padding: 30px;
+    padding: 30px 22px 30px 30px;
     margin-bottom: 20px !important;
   }
   .yt-cart-price-lister {
