--- a/src/packages/blocks/shoppingcart/assets/css/index.scoped.css
+++ b/src/packages/blocks/shoppingcart/assets/css/index.scoped.css
@@ -66,7 +66,7 @@
 
 .cart-prodict-info {
   /* width: 100%; */
-  flex: 0 0 52%;
+  flex: 0 0 60%;
 }
 
 .cart-product-image {
